overlap solved

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 .header {
     position: sticky;
+    z-index: 2;
     top: 0;
     background-color: white;
 }
